Changed li background-images to svg for retina

--- a/style/_content.scss
+++ b/style/_content.scss
@@ -64,7 +64,7 @@ h6 {
             li {
                 padding-left: 24.1px;
                 list-style-type: none;
-                background-image: url('../assets/m_dash.png');
+                background-image: url('../assets/hfkasta_stack.svg#m_dash');
                 background-position: top left;
                 background-repeat: no-repeat;
             }
@@ -293,7 +293,7 @@ h6 {
 
                 li {
                     padding-left: 36px;
-                    background-image: url('../assets/l_dash.png');
+                    background-image: url('../assets/hfkasta_stack.svg#l_dash');
                 }
             }
 
