--- a/style/style.css
+++ b/style/style.css
@@ -1723,7 +1723,7 @@ h6 {
 .wrapper main .content > ul li {
   padding-left: 24.1px;
   list-style-type: none;
-  background-image: url("../assets/m_dash.png");
+  background-image: url("../assets/hfkasta_stack.svg#m_dash");
   background-position: top left;
   background-repeat: no-repeat;
 }
@@ -1917,7 +1917,7 @@ h6 {
   }
   .wrapper main .content > ul li {
     padding-left: 36px;
-    background-image: url("../assets/l_dash.png");
+    background-image: url("../assets/hfkasta_stack.svg#l_dash");
   }
   .wrapper main .content figure.wp-block-gallery li.blocks-gallery-item figure figcaption {
     font-size: 1.5625rem;
