Changed li background-image-size to original

--- a/style/_content.scss
+++ b/style/_content.scss
@@ -67,6 +67,7 @@ h6 {
                 background-image: url('../assets/hfkasta_stack.svg#m_dash');
                 background-position: top left;
                 background-repeat: no-repeat;
+                background-size: 24.1px;
             }
         }
 
@@ -293,6 +294,7 @@ h6 {
 
                 li {
                     padding-left: 36px;
+                    background-size: 36px;
                     background-image: url('../assets/hfkasta_stack.svg#l_dash');
                 }
             }
