--- a/style/_content.scss
+++ b/style/_content.scss
@@ -266,6 +266,13 @@ h6 {
                 }
             }
         }
+
+    }
+}
+
+@media (min-width: $breakpoint-tablet-landscape) {
+    .wrapper main .content_sidebar-note {
+        display: none;
     }
 }
 
@@ -301,10 +308,6 @@ h6 {
                     font-size: $font-size-25;
                 }
             }
-        }
-
-        .content_sidebar-note {
-            display: none;
         }
     }
 }
