--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -7,11 +7,11 @@
 footer {
     border-top: $border-weight_m solid $brand-primary-color;
     background: #fff;
-    z-index: 20;
+    // z-index: 20;
     position: relative;
     width: 100%;
-    height: $footer-height + 2px;
-    padding: 10px 20px;
+    // height: $footer-height + 2px;
+    height: auto;
     display: flex;
     box-sizing: border-box;
 
@@ -23,8 +23,8 @@ footer {
     }
 
     ul {
-        margin: 10px 0;
-        padding: 0;
+        margin: 0;
+        padding: 10px 0;
 
         li {
             list-style-type: none;
@@ -37,9 +37,13 @@ footer {
 }
 
 @media (min-width: $breakpoint-tablet) {
-    footer ul li {
-        width: auto;
-        margin: 0 20px 0 0;
-        text-align: left;
+    footer {
+        padding: 10px 20px;
+
+        ul li {
+            width: auto;
+            margin: 0 20px 0 0;
+            text-align: left;
+        }
     }
 }
