--- a/style/style.css
+++ b/style/style.css
@@ -177,27 +177,29 @@
 }
 
 nav {
-  position: relative;
-  float: right;
-  top: 0;
-  margin-left: 0;
-  margin-right: -325px;
-  min-width: 325px;
-  min-height: 100%;
+  position: fixed;
+  top: 50px;
+  right: -325px;
+  width: 325px;
+  height: 100%;
   background: #fff;
   color: #5a00be;
   border-left: 2px solid #5a00be;
   z-index: 30;
-  -webkit-transition: margin-right 0.5s ease, margin-left 0.5s ease;
-  transition: margin-right 0.5s ease, margin-left 0.5s ease;
-  padding: 59px 20px 80px 20px;
+  -webkit-transition: right 0.5s ease;
+  transition: right 0.5s ease;
+  padding: 59px 20px 20px 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  overflow-y: scroll;
 }
 
 nav.is-open {
-  margin-right: 0;
-  margin-left: -325px;
+  right: 0;
+}
+
+nav .nav_content {
+  height: auto;
 }
 
 nav ul li a,
@@ -493,6 +495,7 @@ nav .sidebar_note_top {
     position: relative;
     margin: 0;
     right: auto;
+    top: 0 !important;
     padding: 20px;
   }
   nav .sidebar_note,
@@ -595,11 +598,9 @@ nav .sidebar_note_top {
 footer {
   border-top: 2px solid #5a00be;
   background: #fff;
-  z-index: 20;
   position: relative;
   width: 100%;
-  height: 62px;
-  padding: 10px 20px;
+  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -613,8 +614,8 @@ footer .menu-footer-de-en-container {
 }
 
 footer ul {
-  margin: 10px 0;
-  padding: 0;
+  margin: 0;
+  padding: 10px 0;
 }
 
 footer ul li {
@@ -626,6 +627,9 @@ footer ul li {
 }
 
 @media (min-width: 768px) {
+  footer {
+    padding: 10px 20px;
+  }
   footer ul li {
     width: auto;
     margin: 0 20px 0 0;
