Fixed few errors, animation on sub-menus integrated

--- a/style/_entry-header.scss
+++ b/style/_entry-header.scss
@@ -47,6 +47,9 @@ body.page-child {
 
     // Sidebar not hint for mobile
     .sidebar_note_link {
+        width: 240px;
+        margin: 0 auto;
+
         .sidebar_note_arrow {
             width: 38.56px;
             height: 56.75px;
