--- a/style/_links.scss
+++ b/style/_links.scss
@@ -43,9 +43,8 @@ nav .sidebar_note_top p,
 main .content_sidebar-note p {
 
     a {
-        min-height: $font-size-18 * 2;
-        display: flex;
-        align-items: center;
+        display: inline-flex;
+        align-items: baseline;
 
         &::before {
             content: '';
@@ -57,6 +56,7 @@ main .content_sidebar-note p {
             margin-bottom: -3px;
             background-repeat: no-repeat;
             background-position: left center;
+            align-self: center;
         }
     }
 
