--- a/style/_language-switch.scss
+++ b/style/_language-switch.scss
@@ -53,5 +53,6 @@
 @media (min-width: $breakpoint-screen) {
     .language-switch {
         margin-top: 30px;
+        border: $border-weight_l solid $brand-primary-color;
     }
 }
