--- a/style/style.css
+++ b/style/style.css
@@ -1743,12 +1743,15 @@ h6 {
 }
 
 .wrapper main .content > ul li {
+  position: relative;
   padding-left: 24.1px;
   list-style-type: none;
-  background-image: url("../assets/hfkasta_stack.svg#m_dash");
-  background-position: top left;
-  background-repeat: no-repeat;
-  background-size: 24.1px;
+}
+
+.wrapper main .content > ul li::before {
+  content: '-';
+  position: absolute;
+  left: 0;
 }
 
 .wrapper main .content p a,
