--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -56,6 +56,7 @@ $ticker-height_l: 65px;
 $language-menu-rotation: 12deg;
 
 // Sidebar
+$sidebar-padding: 20px;
 $sidebar-width: 325px;
 $icon-height: 18px;
 $search-bar-height_m: 40px;
