--- a/style/style.css
+++ b/style/style.css
@@ -123,15 +123,15 @@
   font-style: normal;
 }
 
-/*
 @font-face {
-	font-family: 'GT-Haptik-Bold-Oblique';
-	src: url("../assets/font/gt-haptik/GT-Haptik-Bold-Oblique.eot");
-	src: url("../assets/font/gt-haptik/GT-Haptik-Bold-Oblique.eot?#iefix") format("embedded-opentype"), url("../assets/font/gt-haptik/GT-Haptik-Bold-Oblique.woff2") format("woff2"), url("../assets/font/gt-haptik/GT-Haptik-Bold-Oblique.woff") format("woff"), url("../assets/font/gt-haptik/GT-Haptik-Bold-Oblique.ttf") format("truetype");
-	font-weight: normal;
-	font-style: normal;
+  font-family: 'GT-Haptik-Bold-Oblique';
+  src: url("../assets/font/gt-haptik/GT-Haptik-Bold-Oblique.eot");
+  src: url("../assets/font/gt-haptik/GT-Haptik-Bold-Oblique.eot?#iefix") format("embedded-opentype"), url("../assets/font/gt-haptik/GT-Haptik-Bold-Oblique.woff2") format("woff2"), url("../assets/font/gt-haptik/GT-Haptik-Bold-Oblique.woff") format("woff"), url("../assets/font/gt-haptik/GT-Haptik-Bold-Oblique.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
+/*
 @font-face {
 	font-family: 'GT-Haptik-Bold-Rotalic';
 	src: url("../assets/font/gt-haptik/GT-Haptik-Bold-Rotalic.eot");
@@ -177,11 +177,6 @@
   z-index: 32;
 }
 
-.hamburger.hamburger--squeeze.is-active {
-  position: absolute;
-  top: 0 !important;
-}
-
 nav {
   position: fixed;
   top: 50px;
@@ -195,7 +190,7 @@ nav {
   z-index: 30;
   -webkit-transition: right 0.5s ease;
   transition: right 0.5s ease;
-  padding: 59px 20px 60px 20px;
+  padding: 39px 20px 60px 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   overflow-y: overlay;
@@ -238,6 +233,14 @@ nav ul li {
 
 nav ul li:not(:last-child) {
   margin-bottom: 10px;
+}
+
+nav ul li.temp a {
+  font-family: 'GT-Haptik-Regular-Oblique', sans-serif;
+}
+
+nav ul li.temp.current-menu-item > a {
+  font-family: 'GT-Haptik-Bold-Oblique', sans-serif;
 }
 
 nav ul li a {
@@ -320,9 +323,9 @@ nav ul.sub-menu li:first-child {
 
 nav .search-form {
   height: 40px !important;
-  width: 100%;
+  width: calc(100% + (20px * 2));
   position: relative;
-  margin-left: -5px;
+  margin-left: -20px;
 }
 
 nav .search-form input {
@@ -334,7 +337,8 @@ nav .search-form input[type="search"] {
 }
 
 nav .search-form .search-bar {
-  border: 2px solid #5a00be !important;
+  border-top: 2px solid #5a00be !important;
+  border-bottom: 2px solid #5a00be !important;
   height: 100%;
   display: block;
 }
@@ -343,7 +347,7 @@ nav .search-form .search-field {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  padding: 5px;
+  padding: 5px 20px;
   border: 0 !important;
   outline: none !important;
   border-radius: 0 !important;
@@ -415,7 +419,7 @@ nav .search-form .search-icon {
 nav .search-form .search-submit,
 nav .search-form .search-icon {
   position: absolute;
-  right: 0;
+  right: 10px;
   top: 0;
 }
 
@@ -481,7 +485,7 @@ nav .sidebar_note_top {
   nav ul li.menu-item-has-children .dropdown-btn:active,
   nav ul li.menu-item-has-children .dropdown-btn:focus {
     margin: 0 0 2.5px 6px;
-    width: 16.2px;
+    width: 18.2px;
   }
   .home-link {
     position: fixed;
@@ -505,20 +509,24 @@ nav .sidebar_note_top {
   nav .sidebar_note_top {
     display: inline-block;
     width: calc(100% + 42px);
-    margin: 0 -21px 20px;
-    padding: 0 20px 20px 20px;
+    padding: 0 20px 20px;
   }
   nav .sidebar_note {
     border-top: 2px solid #5a00be;
+    margin: 0 -21px 20px;
   }
   nav .sidebar_note_top {
     border-bottom: 2px solid #5a00be;
+    margin: 0 -20px;
   }
   nav .sidebar_note_top p {
     margin: 0;
   }
   nav.is-open {
     margin-left: 0;
+  }
+  nav .search-form .search-bar {
+    border-top: 0 !important;
   }
   .content .content_note {
     display: none;
