--- a/style/_forms.scss
+++ b/style/_forms.scss
@@ -208,9 +208,10 @@ select {
 	}
 }
 
-// Error Messages
+
 body {
 
+	// Error Messages
 	.wpcf7 form.invalid .wpcf7-response-output,
 	.wpcf7 form.unaccepted .wpcf7-response-output {
 		margin: 0;
@@ -219,6 +220,16 @@ body {
 		font-size: $font-size-18;
 		color: $brand-secondary-color;
 		padding: 20px;
+	}
+
+	// Success Messages
+	.wpcf7-response-output {
+		font-family: 'GT-Haptik-Regular', sans-serif;
+		font-size: $font-size-18;
+		color: $contrast-primary-color;
+		background: $brand-primary-color;
+		padding: 20px;
+		border: 0;
 	}
 }
 
