--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -327,6 +327,7 @@ nav {
         ul li.menu-item-has-children .dropdown-btn:focus {
             margin: 0 0 2.5px 6px;
             width: 18.2px;
+            height: 12.1px;
         }
     }
 
@@ -345,7 +346,7 @@ nav {
         margin: 0;
         right: auto;
         top: 0 !important;
-        padding: $sidebar-padding;
+        padding: 0 $sidebar-padding;
         overflow: visible;
         height: auto;
 
