--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -172,7 +172,7 @@ nav {
             width: 100%;
             height: 100%;
             min-height: 100%;
-            padding: $search-form-padding $sidebar-padding;
+            padding: $search-form-padding $sidebar-padding + 23.29px + 5px $search-form-padding $sidebar-padding;
             border: 0 !important;
             outline: none !important;
             border-radius: 0 !important;
@@ -458,7 +458,7 @@ nav {
             height: $search-bar-height_l !important;
 
             .search-bar {
-                border: $border-weight_l solid $brand-primary-color !important;
+                border-bottom: $border-weight_l solid $brand-primary-color !important;
             }
 
             .search-icon {
