--- a/style/_forms.scss
+++ b/style/_forms.scss
@@ -220,16 +220,18 @@ body {
 		font-size: $font-size-18;
 		color: $brand-secondary-color;
 		padding: 20px;
+		background: none;
 	}
 
 	// Success Messages
-	.wpcf7-response-output {
+	.wpcf7 form .wpcf7-response-output {
 		font-family: 'GT-Haptik-Regular', sans-serif;
 		font-size: $font-size-18;
 		color: $contrast-primary-color;
 		background: $brand-primary-color;
 		padding: 20px;
 		border: 0;
+		margin: 0;
 	}
 }
 
