padding sidebar-content-top corrected

--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -366,6 +366,7 @@ nav {
         .sidebar_note_top {
             border-bottom: $border-weight_m solid $brand-primary-color;
             margin: 0 (-$sidebar-padding);
+            padding: $sidebar-padding;
 
             p {
                 margin: 0;
