--- a/style/style.css
+++ b/style/style.css
@@ -519,6 +519,7 @@ nav .sidebar_note_top {
   nav .sidebar_note_top {
     border-bottom: 2px solid #5a00be;
     margin: 0 -20px;
+    padding: 20px;
   }
   nav .sidebar_note_top p {
     margin: 0;
