--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -36,6 +36,12 @@ footer {
     }
 }
 
+body.nav-is-open {
+    footer {
+        z-index: 10;
+    }
+}
+
 @media (min-width: $breakpoint-tablet) {
     footer {
         padding: 10px 20px;
@@ -44,6 +50,14 @@ footer {
             width: auto;
             margin: 0 20px 0 0;
             text-align: left;
+        }
+    }
+}
+
+@media (min-width: $breakpoint-tablet-landscape) {
+    body.nav-is-open {
+        footer {
+            z-index: 20;
         }
     }
 }
